# NORN

./: 1840-1869.xlsx  NORN_october_2023.ipynb  Untitled.ipynb  convert_old_meta_to_table.ipynb  corpus_konsensus.csv  do_analysis.ipynb  konsensus.ipynb  konsensuskorpus.xlsx  konsensuskorpus_master.xlsx  norn_meta.py  oversikt.xlsx  pca_romance.ipynb  pyproject.toml  reference_table.xlsx  requirements.txt  urn_to_romance.csv
Data/: 1800-1839.xlsx
Nasjonalromantikk/: Aalholm_EnNorskMatros.xml  Aalholm_LysogSkygge.xml  Aalholm_NorskeNoveller.xml  Aalholm_PræstenIThellemarken.xml  Aasen_DeiTrëla.xml  Aasen_DeigamleFjelli.xml  Aasen_DenTyngsteSorgogMøda.xml  Aasen_DiktOgSanning.xml  Aasen_Dovrefjell.xml  Aasen_ElskhugKvëde.xml  Aasen_Ervingen.xml  Aasen_GamlaVoner.xml  Aasen_GamleNorig.xml  Aasen_Haraldshaugen.xml  Aasen_Heimvegen.xml  Aasen_Livet.xml  Aasen_MeSkalKoma.xml  Aasen_Nordmannen.xml  Aasen_ReiseErindringer.xml  Aasen_Sumarkvelden.xml  Aasen_Symra.xml  Aasen_Vaardagen.xml  Aasen_VitogTru.xml  Asbjørnsen_AftenVedAndelven.xml  Asbjørnsen_DeTrePrindsesseriHvidtenland.xml  Asbjørnsen_EnAftenstund.xml  Asbjørnsen_EnGammeldagsJuleaften.xml  Asbjørnsen_EnHallingmedKvannerot.xml  Asbjørnsen_EnSignekjærringsFortællinger.xml  Asbjørnsen_EnTiurlegiHolleia.xml  Asbjørnsen_Ennatinordmarken.xml  Asbjørnsen_GraverensFortællinger.xml  Asbjørnsen_Hougfolket.xml  Asbjørnsen_Højfjeldsbilleder.xml  Asbjørnsen_JulebesøgetIPræstegaarden.xml  Asbjørnsen_Kværnesagn.xml  Asbjørnsen_MatthiasSkytter.xml  Asbjørnsen_Moe_Folkeeventyr  Asbjørnsen_Moe_GuttenSomGikTilNordenvinden.xml  (+450 more)
(+10 files in other folders)
