[tool.poetry]
name = "norn"
version = "0.1.0"
description = ""
authors = ["Lars Magne Tungland <larsmtungland@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
streamlit = "^1.28.0"
pandas = "^2.1.2"
dhlab = "^2.26.5"
lxml = "^4.9.3"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
